--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,10 @@
+        body{
+
+          background-color: rgb(218, 210, 200);
+        }
+          
         #contenedor {
+
         }
         header {
           background-color: gray;
